# coding-market

./: .replit  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
Scripts/: activate  activate.bat
market/: __init__.py  forms.py  models.py  routes.py
market/templates/: base.html  home.html  login.html  market.html  register.html
market/templates/includes/: items_modals.html  owned_items_modals.html
