[tool.poetry]
name = "repl_nix_coding-market"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask-SQLAlchemy = "^3.0.3"
Flask-WTF = "^1.1.1"
WTForms = "^3.0.1"
email-validator = "^1.3.1"
Flask = "^2.2.3"
Flask-Bcrypt = "^1.0.1"
Flask-Login = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
